--- a/winreword/winreword.vcxproj.filters
+++ b/winreword/winreword.vcxproj.filters
@@ -153,6 +153,12 @@
     <ClInclude Include="..\reword\words.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\reword\tinyxml\tinystr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\reword\tinyxml\tinyxml.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\reword\audio.cpp">
@@ -270,6 +276,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\reword\words.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\reword\tinyxml\tinystr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\reword\tinyxml\tinyxml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\reword\tinyxml\tinyxmlerror.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\reword\tinyxml\tinyxmlparser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
