Update Makefile for debug & release build
Started adding -e option to exclude words based on definition string matches (e.g. abbr.)

--- a/rewordlist/Makefile
+++ b/rewordlist/Makefile
@@ -1,24 +1,47 @@
+## Rewordlist utility setup
+###########################
+
 PROG_NAME = rewordlist
 SOURCES = rewordlist.cpp \
 		words2.cpp \
 		tinyxml/tinystr.cpp \
 		tinyxml/tinyxml.cpp \
 		tinyxml/tinyxmlerror.cpp \
-		tinyxml/tinyxmlparser.cpp \
-		../reword/words.cpp \
+		tinyxml/tinyxmlparser.cpp
+EXTSOURCES = ../reword/words.cpp \
 		../reword/random.cpp \
 		../reword/helpers.cpp 
 
 OBJECTS = $(SOURCES:.cpp=.o)
+EXTOBJECTS = $(EXTSOURCES:.cpp=.o)
 BIN = $(PROG_NAME)
 
-## compile
-CXX = g++
-#CXXFLAGS = -std=c++17 -c -Wall -ggdb -D_DEBUG -I/usr/include
-CXXFLAGS = -std=c++17 -c -Wall -I/usr/include
-# -std=c++11  -m64
+## debug settings
+#################
 
-## link
+DBGDIR = bin/debug
+DBGBIN = $(DBGDIR)/$(BIN)
+DBGOBJS = $(addprefix $(DBGDIR)/, $(OBJECTS))
+#DBGCXXFLAGS = -std=c++17 -I/usr/include -O0 -DDEBUG -Wall -Werror -Wextra
+DBGCXXFLAGS = -std=c++17 -I/usr/include -O0 -DDEBUG -D_DEBUG -Wall
+
+## release settings
+###################
+
+RELDIR = bin/release
+RELBIN = $(RELDIR)/$(BIN)
+RELOBJS = $(addprefix $(RELDIR)/, $(OBJECTS))
+#RELCXXFLAGS = -std=c++17 -I/usr/include -DNDEBUG -Wall -Werror -Wextra
+RELCXXFLAGS = -std=c++17 -I/usr/include -DNDEBUG -Wall
+
+## compile rules
+################
+
+CXX = g++
+
+## link rules
+#############
+
 # working using std regex
 LDFLAGS = -Wall -L/usr/lib -L/usr/lib/x86_64-linux-gnu
 # working if using boost regex: 
@@ -28,20 +51,42 @@ LDFLAGS = -Wall -L/usr/lib -L/usr/lib/x86_64-linux-gnu
 # LDFLAGS = -L/usr/lib/x86_64-linux-gnu -lpthread -lboost_thread -lboost_regex
 # LDFLAGS = -L/home/ajm/boost/boost_1_73_0/stage/lib -lboost_thread -lboost_regex
 
+## targets
+##########
 
-all: $(SOURCES) $(BIN)
-#	make pcversion pc=1
-#	$(CXX) $(CXXFLAGS) $(SOURCES) -o $(PROG_NAME)
-#	$(CXX) rewordlist.cpp words2.cpp ../reword/words.cpp ../reword/random.cpp ../reword/helpers.cpp tinyxml/tinystr.cpp tinyxml/tinyxmlerror.cpp tinyxml/tinyxmlparser.cpp tinyxml/tinyxml.cpp -o rewordlist
+all: prep release
 
-pcversion: $(SOURCES) $(BIN)
+alldebug: prep debug
 
-# NOTE: LDFLAGS must come after OBJECTS
-$(BIN): $(OBJECTS) 
-	$(CXX) $(OBJECTS) $(LDFLAGS) -o $@
-	
-.cpp.o:
-	$(CXX) $(CXXFLAGS) $< -o $@
+## Debug rules
+##############
+debug: $(DBGBIN)
+
+$(DBGBIN): $(DBGOBJS) $(EXTOBJECTS)
+	$(CXX) $(CXXFLAGS) $(DBGCXXFLAGS) $(LDFLAGS) -o $(DBGBIN) $^
+
+$(DBGDIR)/%.o: %.cpp
+	$(CXX) -c $(CXXFLAGS) $(DBGCXXFLAGS) -o $@ $<
+
+## Release rules
+################
+
+release: $(RELBIN)
+
+$(RELBIN): $(RELOBJS) $(EXTOBJECTS)
+	$(CXX) $(CXXFLAGS) $(RELCXXFLAGS) $(LDFLAGS) -o $(RELBIN) $^
+
+$(RELDIR)/%.o: %.cpp
+	$(CXX) -c $(CXXFLAGS) $(RELCXXFLAGS) -o $@ $<
+
+## Other rules
+##############
+
+prep:
+	@mkdir -p $(DBGDIR)/tinyxml $(RELDIR)/tinyxml
+
+## clean up rules
+#################
 
 cleanobjs:
 	rm -f $(OBJECTS)
